[metadata]
name = softioc
description = Embed an EPICS IOC in a Python process
url = https://github.com/dls-controls/pythonSoftIOC
author = Michael Abbott
author_email = Michael.Abbott@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = softioc
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*, !=3.5.*, !=3.6.*

[options.entry_points]
# Include a command line script
console_scripts =
    pythonSoftIOC = softioc.__main__:main

[options.package_data]
softioc =
    access.acf
    device.dbd
    devIocStats.dbd
    iocStatsDb/*

[options.extras_require]
# Useful extras for use at DLS
useful =
    cothread
    scipy
    aioca >=1.1

[flake8]
max-line-length = 80
extend-ignore =
    F401 F403 F405  # Allow from module import *
    E251  # Allow call(param = value)
    E301 E302 E303 E305 # Allow any number of blank lines

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts = --tb=native -vv --doctest-modules --ignore=iocStats --ignore=epicscorelibs --ignore=docs

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = */_version_git.py
