[metadata]
name = softioc
description = Embed an EPICS IOC in a Python process
url = https://github.com/DiamondLightSource/pythonSoftIOC
author = Michael Abbott
author_email = Michael.Abbott@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = softioc
python_requires = >=3.7

[options.entry_points]
# Include a command line script
console_scripts =
    pythonSoftIOC = softioc.__main__:main

[options.package_data]
softioc =
    access.acf
    device.dbd
    iocStats/devIocStats/*
    iocStats/iocAdmin/Db/*
    # Include the OS specific files in the sdist, even
    # if not packages by setup.py (as we only build sdist on one arch)
    iocStats/devIocStats/os/default/*
    iocStats/devIocStats/os/posix/*
    iocStats/devIocStats/os/Darwin/*
    iocStats/devIocStats/os/WIN32/*
    iocStats/devIocStats/os/Linux/*

[options.extras_require]
# Useful extras for use at DLS
useful =
    cothread
    scipy
    aioca >=1.6
# Dev and docs dependencies
dev =
    pytest-cov
    pytest-flake8
    # Flake8 5.0 starts printing error, so pin to avoid it:
    # AttributeError: module 'flake8.options.config' has no attribute 'ConfigFileFinder'
    flake8 <5.0.0
    # Higher version of sphinx require importlib-metadata version that conflicts with other packages
    sphinx ==4.3.2
    sphinx-rtd-theme ==1.0.0
    sphinx-rtd-theme-github-versions ==1.1
    pytest-asyncio
    aioca >=1.6
    cothread; sys_platform != "win32"
    p4p>=4.2.0a2

[flake8]
max-line-length = 80
extend-ignore =
    # Allow from module import *
    F401 F403 F405
    # Allow call(param = value)
    E251
    # Allow any number of blank lines
    E301 E302 E303 E305

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
# Don't do flake8 here as we need to separate it out for CI
addopts =
    --tb=native -vv --doctest-modules --ignore=softioc/iocStats --ignore=epicscorelibs --ignore=docs
    --cov=softioc --cov-report term --cov-report xml:cov.xml
# Enables all discovered async tests and fixtures to be automatically marked as async, even if
# they don't have a specific marker https://github.com/pytest-dev/pytest-asyncio#auto-mode
asyncio_mode = auto

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = */_version_git.py
patch = subprocess
